<resources>
    <string name="app_name">PDF-OCR scanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_valid_number">Enter valid number</string>
    <string name="enter_valid_text">Enter valid text</string>
    <string name="enter_valid_url">Enter valid url</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_website_browsable_url">Enter website browsable url</string>
    <string name="enter_direct_link">Enter Direct Link</string>
    <string name="enter_twitter_profile_url">Enter twitter profile url</string>
    <string name="enter_youtube_profile_url">Enter Youtube profile url</string>
    <string name="enter_paypal_profile_url">Enter Paypal profile url</string>
    <string name="connected">Connected</string>
    <string name="help_and_support">Help and support</string>
    <string name="allow">Allow</string>
    <string name="allow_permission_grant_and_access_all_features_camera_location_notification_permission">Allow Permission grant and Access All Features camera , location ,notification permission</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="bangla">Bangla</string>
    <string name="language">Language</string>
    <string name="view">View</string>
    <string name="wifi_ssid_name">Wifi SSID (name)</string>
    <string name="select_security_type">Select security type</string>
    <string name="wifi_password">Wifi password</string>
    <string name="generate_wifi_qr_code_and_easy_way_to_share">Generate Wifi Qr Code and easy way to share</string>
    <string name="generate">Generate</string>
    <string name="enter_valid_phone">Enter valid phone</string>
    <string name="enter_message">Enter message</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="enter_latitude_91_87788">Enter latitude: 91.87788</string>
    <string name="enter_longitude_92_87788">Enter longitude: 92.87788</string>
    <string name="enter_subject_optional">Enter subject - optional</string>
    <string name="enter_body_description_optional">Enter body description - optional</string>
    <string name="copy_text">copy text</string>
    <string name="share_image">share image</string>
    <string name="enter_password">Enter password</string>
    <string name="select_barcode">Select BarCode</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_organization_house">Enter organization/house</string>
    <string name="enter_mobile_no">Enter mobile no</string>
    <string name="enter_social_site_facebook_linkedin">Enter social site:facebook,linkedin</string>
    <string name="enter_full_description">Enter full description</string>
    <string name="connect_to_wifi" translatable="false">Connect to WIFI</string>
    <string name="upload_qr_code">Upload QR Code</string>
    <string name="address_qr_code">Address QR code</string>
    <string name="email_qr_code">Email QR Code</string>
    <string name="location_qr_code">Location QR Code</string>
    <string name="sms_qr_code">Sms QR Code</string>
    <string name="wifi_qr_code">Wifi QR Code</string>
    <string name="wifi_connected">Wifi Connected</string>
    <string name="qr_code_not_found">QR code not found</string>
    <string name="qr_bar_code_generate">QR/Bar Code Generate</string>
    <string name="qr_code">QR Code</string>
    <string name="bar_code">Bar Code</string>
    <string name="qr_scans">Scans history</string>
    <string name="my_code">My Code</string>
    <string name="history">History</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="others">Others</string>
    <string name="wifi">Wifi</string>
    <string name="wifi_scans">wifi scans</string>
    <string name="connected_history">Connected history</string>
    <string name="location_permission_is_required_to_scan_wi_fi">Location permission is required to scan Wi-Fi</string>
    <string name="wi_fi_is_disabled_enabling_wi_fi">Wi-Fi is disabled. Enabling Wi-Fi...</string>
    <string name="input_image_name">input image name..</string>
    <string name="qr_bar_code">Qr,Bar code</string>
    <string name="are_you_sure_you_want_to_save_phone_memory">Are you sure you want to save phone memory :</string>
    <string name="qr_code_generate_successfully">QR code Generate Successfully</string>
    <string name="wifi_connecting">Wifi connecting..</string>
    <string name="wifi_connected_success">Wifi Connected Success</string>
    <string name="wifi_connected_fail">Wifi Connected fail</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="select_an_item">Select an item</string>
    <string name="document_to_text_ocr">Document to Text(OCR)</string>
    <string name="image_to_pdf_converter">Image to PDF Converter</string>
    <string name="id_card_scan">Id card scan</string>
    <string name="share_pdf">Share pdf</string>
    <string name="share_app">Share App</string>
    <string name="rate_amp_review"><![CDATA[Rate & Review]]></string>
    <string name="clear_data">Clear Data</string>
    <string name="documents">Documents</string>
    <string name="scan_details">Scan Details</string>
    <string name="dashbord">Dashbord</string>
    <string name="show_all">show all</string>
    <string name="start_scan">Start Scan</string>
    <string name="pdf">PDF</string>
    <string name="no_qr_code_scans_yet">No qr code scans yet</string>
    <string name="start_scanning_and_your_scan_data_will_appear_here">Your scan data will appear here.</string>
    <string name="start_scanning">[ 📷 Start Scanning ]</string>
    <string name="write_or_edit_scanned_text">Write or edit scanned text...</string>
</resources>