<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="12dp"
    android:padding="16dp"
    android:elevation="0dp"
    android:background="@drawable/rounded_corner_radius"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/no_qr_code_scans_yet"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="8dp" android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/start_scanning_and_your_scan_data_will_appear_here"
        android:textSize="11sp"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="2dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/actionButton"
        android:text="@string/start_scanning"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="32dp"
        android:textSize="14sp"
        app:cornerRadius="24dp"
        android:backgroundTint="@color/button_background"
        android:textColor="@color/white"
        app:icon="@drawable/ic_qr_scan_svg"
        app:iconSize="20dp"
        app:iconPadding="8dp"
        app:iconTint="@color/white" />
</LinearLayout>
