<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:paddingVertical="24dp"
    android:elevation="0dp"
    android:paddingHorizontal="24dp"
    android:background="@drawable/round_gray_radius8dp">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/select_an_item"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"/>

    <!-- Image to Text -->
    <LinearLayout
        android:id="@+id/optionImageToText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingVertical="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_language"
            app:tint="@color/button_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_to_text_ocr"
            android:textSize="13sp"
            android:layout_marginStart="12dp"
            android:textColor="@color/textColor"/>
    </LinearLayout>

    <!-- Image to PDF -->
    <LinearLayout
        android:id="@+id/optionImageToPdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_language"
            app:tint="@color/button_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_to_pdf_converter"
            android:layout_marginStart="12dp"
            android:textSize="13sp"
            android:textColor="@color/textColor"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/idCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_language"
            app:tint="@color/button_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_card_scan"
            android:layout_marginStart="12dp"
            android:textSize="13sp"
            android:textColor="@color/textColor"/>
    </LinearLayout>

</LinearLayout>
